# DronePoli

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall
devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
devel/.private/catkin_tools_prebuild/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
devel/.private/dronepoli/: .catkin  .rosinstall  setup.sh
devel/.private/dronepoli/lib/dronepoli/: dronepoli_node
devel/.private/dronepoli/lib/pkgconfig/: dronepoli.pc
devel/lib/dronepoli/: dronepoli_node
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dronepoli.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/dronepoli/cmake/: dronepoliConfig-version.cmake  dronepoliConfig.cmake
logs/dronepoli/: build.check.001.log.stderr  build.check.002.log.stderr  build.check.003.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr  build.check.007.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.011.log.stderr  build.make.018.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr
src/dronepoli/: CMakeLists.txt  package.xml
src/dronepoli/backup/: mission.cpp
src/dronepoli/include/: callback.h  convert.h  drone.h
src/dronepoli/src/: controller.cpp
(+1 files in other folders)
